// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: BillingSummaryPage should not render billing and ips if on free plan 1`] = `
<Page
  empty={Object {}}
  title="Billing"
>
  <Connect(Component)>
    <SuspendedForBilling
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
      condition={[Function]}
    />
    <ManuallyBilledBanner
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
      condition={[Function]}
    />
    <BillingSummary
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
      condition={[Function]}
      sendingIps={
        Object {
          "list": Array [],
        }
      }
    />
  </Connect(Component)>
</Page>
`;

exports[`Page: BillingSummaryPage should render banner when manually billed 1`] = `
<Page
  empty={Object {}}
  title="Billing"
>
  <Connect(Component)>
    <SuspendedForBilling
      account={
        Object {
          "subscription": Object {
            "self_serve": false,
          },
        }
      }
      condition={[Function]}
    />
    <ManuallyBilledBanner
      account={
        Object {
          "subscription": Object {
            "self_serve": false,
          },
        }
      }
      condition={[Function]}
    />
    <BillingSummary
      account={
        Object {
          "subscription": Object {
            "self_serve": false,
          },
        }
      }
      condition={[Function]}
      sendingIps={
        Object {
          "list": Array [],
        }
      }
    />
  </Connect(Component)>
</Page>
`;

exports[`Page: BillingSummaryPage should render billing and dedicated IP summary if on paid plan 1`] = `
<Page
  empty={Object {}}
  title="Billing"
>
  <Connect(Component)>
    <SuspendedForBilling
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
      condition={[Function]}
    />
    <ManuallyBilledBanner
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
      condition={[Function]}
    />
    <BillingSummary
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
      condition={[Function]}
      sendingIps={
        Object {
          "list": Array [],
        }
      }
    />
  </Connect(Component)>
</Page>
`;

exports[`Page: BillingSummaryPage should render upgrade on free plan 1`] = `
<Page
  empty={Object {}}
  title="Billing"
>
  <Connect(Component)>
    <SuspendedForBilling
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
      condition={[Function]}
    />
    <ManuallyBilledBanner
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
      condition={[Function]}
    />
    <BillingSummary
      account={
        Object {
          "subscription": Object {
            "self_serve": true,
          },
        }
      }
      condition={[Function]}
      sendingIps={
        Object {
          "list": Array [],
        }
      }
    />
  </Connect(Component)>
</Page>
`;
